feat: self-signed certificate support
feat: standalone login/connection dialog on startup

feat: server profiles list for quick & easy connections

refactor!: delete workarounds for Java<8